# grok

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  ReadMe.md
cmake/: FindLLVM.cmake
grok/: grok.sln
grok/grok/: grok.vcxproj  grok.vcxproj.filters
main/: main.cc
src/: astnode.cc  astnode.h  bytecode.h  codegen.cc  codegen.h  exceptions.h  grok.h  heap.h  interpreter.cc  interpreter.h  jsarray.h  jsbasicobject.h  jsfunction.h  jsobject.cc  jsobject.h  lexer.cc  lexer.h  list.h  native.h  object.h  parser.cc  parser.h  program.h  register.h  symtable.h  timer.h  token.h  vm.cc  vm.h
src/common/: CMakeLists.txt  allocator.h  colors.h  exceptions.h  exceptons.h  generic-stack.h  list.h  queue.h  util.h
src/grok/: CMakeLists.txt  context.cc  context.h  options.cc  options.h  runner.cc  runner.h
src/input/: CMakeLists.txt  input-stream.cc  input-stream.h  readline.cc  readline.h
src/jit/: CMakeLists.txt
src/jit/codegen/: CMakeLists.txt  simple.cc  simple.h
src/lexer/: CMakeLists.txt  lexer.cc  lexer.h  token.h
src/libs/: CMakeLists.txt  array-join.cc  array-map.cc  array-push-pop.cc  array-shift-unshift.cc  array-slice.cc  array-slice.h  array-sort.cc  array-sort.h  console.cc  console.h  library.cc  library.h
src/libs/array/: CMakeLists.txt  array-concat.cc  array-concat.h  array-join.cc  array-map.h  array-reverse.cc  array-reverse.h  array-shift-unshift.h  array-slice.cc  array_constructor.cc  array_constructor.h  concat.cc  join.cc  join.h  map.cc  push-pop.cc  push-pop.h  reverse.cc  shift-unshift.cc  slice.cc  sort.cc
src/libs/console/: CMakeLists.txt  console.cc  console.h
src/libs/example/: CMakeLists.txt  example.h
src/libs/math/: CMakeLists.txt  random.cc  random.h
src/libs/regex/: CMakeLists.txt  regex.cc  regex.h
src/libs/string/: CMakeLists.txt  properties.cc  properties.h  slice.cc  slice.h  split.cc  split.h
src/libs/timer/: CMakeLists.txt  timer.cc  timer.h
src/object/: CMakeLists.txt  argument.h  array.cc  array.h  function-template.h  function.cc  function.h  jsarray.h  jsbasicobject.cc  jsbasicobject.h  jsfunction.h  jsnumber.cc  jsnumber.h  jsobject.cc  jsobject.h  jsstring.cc  jsstring.h  object.h  prototype.cc  prototype.h
src/parser/: CMakeLists.txt  astvisitor.h  blockstatement.cc  blockstatement.h  bytecode.h  common.h  expression.cc  expression.h  forstatement.cc  forstatement.h  functionstatement.cc  functionstatement.h  ifstatement.cc  ifstatement.h  parser.cc  parser.h  returnstatement.h
src/vm/: CMakeLists.txt  api.h  codegen.cc  codegen.h  context.cc  context.h  counter.h  genarray.cc  genexpression.cc  genfunction.cc  genobject.cc  instruction-builder.cc  instruction-builder.h  instruction-list.cc  instruction-list.h  instruction-visitor.h  instruction.cc  instruction.h  instructions.cc  instructions.h  printer.cc  printer.h  var-store.cc  var-store.h  vm.cc  vm.h  vm_interrupts.h
test/: array-find.js  array-slice.js  function2.js  sum.js  test-lexer.h  test-object.cpp  test-stats.h  test.cc  test.h
test/misc/: array-find.js  array-map.js  array-push-pop.js  fib.js  function.js  function1.js  function3.js  graph.js  object1.js
test/testing/: test001.js  test002.js  test003.js  test004.js  test005.js  test006.js  test007.js  test008.js  test014.js  test015.js  test016.js  test019.js  test020.js  test022.js  test023.js  test024.js  test025.js  test026.js  test027.js  test028.js  test029.js  test030.js  test031.js  test032.js  test033.js  test034.js  test035.js  test036.js  test037.js  test038.js  test039.js  test040.js  test041.js  test042.js  test043.js  test044.js  test045.js  test046.js  test047.js  test048.js  (+1 more)
